--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
     <script src="index.js" defer></script>
   </head>
   <body>
@@ -65,22 +66,22 @@
             </div>
           </div>
           <!-- sec1 menu -->
-          <a class="link-pin" href="#about" aria-label="menu" style="top: 31%; height: 8%; left: 20%; width: 19%">
+          <a class="link-pin" data-target="#about" aria-label="menu" style="top: 31%; height: 8%; left: 20%; width: 19%">
             <div class="img--block">
               <img src="./assets/img/deco/menu1.png" alt="About" />
             </div>
           </a>
-          <a class="link-pin" href="#sec2" aria-label="menu" style="top: 31%; height: 8%; left: 40%; width: 19%">
+          <a class="link-pin" data-target="#sec2" aria-label="menu" style="top: 31%; height: 8%; left: 40%; width: 19%">
             <div class="img--block">
               <img src="./assets/img/deco/menu2.png" alt="홍보 영상" />
             </div>
           </a>
-          <a class="link-pin" href="#sec3" aria-label="menu" style="top: 31%; height: 8%; left: 60%; width: 19%">
+          <a class="link-pin" data-target="#sec3" aria-label="menu" style="top: 31%; height: 8%; left: 60%; width: 19%">
             <div class="img--block">
               <img src="./assets/img/deco/menu3.png" alt="9 Zone" />
             </div>
           </a>
-          <a class="link-pin" href="#sec4" aria-label="menu" style="top: 31%; height: 8%; left: 80%; width: 19%">
+          <a class="link-pin" data-target="#sec4" aria-label="menu" style="top: 31%; height: 8%; left: 80%; width: 19%">
             <div class="img--block">
               <img src="./assets/img/deco/menu4.png" alt="Event" />
             </div>
@@ -269,6 +270,22 @@
       </div>
     </main>
     <script>
+      document.querySelectorAll(".link-pin[data-target]").forEach((link) => {
+        link.addEventListener("click", function (e) {
+          e.preventDefault();
+
+          const target = this.getAttribute("data-target");
+
+          gsap.to(window, {
+            duration: 0.2,
+            scrollTo: {
+              y: target,
+              offsetY: 0,
+            },
+            ease: "power2.out",
+          });
+        });
+      });
       let scrollY = 0;
 
       function openLayer() {
