--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
               <img src="./assets/img/deco/sec2_ball_01.png" alt="" />
             </div>
           </div>
-          <a class="link-pin" href="#link1" style="top: 7.9%; height: 16.5%; left: 50%; width: 51%"> </a>
-          <a class="link-pin" href="#link1" style="top: 27.7%; height: 16.5%; left: 50%; width: 51%"> </a>
+          <a class="link-pin" href="#link1" style="top: 2.7%; height: 17%; left: 50%; width: 50%"> </a>
+          <a class="link-pin" href="#link1" style="top: 22.5%; height: 17%; left: 50%; width: 50%"> </a>
         </section>
         <!-- 9zone -->
         <section id="sec3" class="sec3">
@@ -260,10 +260,20 @@
           </div>
         </section>
         <section class="sec6">
-          <div class="img--block">
-            <img src="./assets/img/bg6.jpg" alt="" />
+          <div class="footer-wrap">
+            <div class="footer-logo">
+              <img src="assets/img/Logo.png" alt="내편중구 로고" />
+            </div>
+
+            <div class="footer-info">
+              <p class="footer-title">[플레이그라운드 중구 운영사무국] 주식회사 더아이케이</p>
+              <p>사업자등록번호 : 770-81-02260</p>
+              <p>Contact : 070-4571-5018 / ksy@theikinc.com</p>
+              <p>ⓒ Jung-Gu Office. All Rights Reserved.</p>
+              <p>사진 출처 ⓒ 한국관광공사 포토코리아(이범수, IR스튜디오, 황선영)</p>
+            </div>
           </div>
-        </section> 
+        </section>
       </div>
       <div id="layerWrap" class="layer-wrap">
         <div class="layer-content"></div>
@@ -401,7 +411,7 @@
 
           breakpoints: {
             // 1024px 이상 → 슬라이드 OFF, 정적 그리드
-            1120: {
+            1170: {
               slidesPerView: 3,
               grid: {
                 rows: 3,
