--- a/zone2.html
+++ b/zone2.html
@@ -14,7 +14,7 @@
 
         <section class="sec1">
           <div class="img--block">
-            <img src="assets/img/zone2_img/sec1_main_img.jpg" alt="" />
+            <img src="assets/img/zone2_img/sec1_main_img.jpg" alt="옛것 을지 금으로" />
           </div>
           <a class="link-pin" id="closeLayer" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
@@ -63,28 +63,6 @@
         </div>
       </div>
     </main>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const stickySvg = document.querySelector(".close_ic img");
-        const sec1 = document.querySelector(".sec1");
-
-        const observer = new IntersectionObserver(
-          (entries) => {
-            entries.forEach((entry) => {
-              if (entry.isIntersecting) {
-                // sec1 안에 있을 때 (원래 색)
-                stickySvg.style.filter = "invert(0)"; // 검정 유지
-              } else {
-                // sec1 벗어날 때 (색 변경)
-                stickySvg.style.filter = "invert(1)"; // 흰색처럼 표현
-              }
-            });
-          },
-          { threshold: 0 }
-        );
-
-        observer.observe(sec1);
-      });
-    </script>
+    
   </body>
 </html>
