--- a/index.html
+++ b/index.html
@@ -280,6 +280,8 @@
       </div>
     </main>
     <script>
+
+      // scrollTo
       document.querySelectorAll(".link-pin[data-target]").forEach((link) => {
         link.addEventListener("click", function (e) {
           e.preventDefault();
@@ -310,6 +312,8 @@
         // body 스크롤 다시 활성화
         document.body.classList.remove("body-lock");
       }
+
+
       document.addEventListener("DOMContentLoaded", () => {
         document.querySelectorAll(".open-zone").forEach((link) => {
           link.addEventListener("click", function (e) {
@@ -357,6 +361,8 @@
           }
         });
 
+        
+        // lang js
         const langWrap = document.querySelector(".lang-wrap");
         const langSelect = document.querySelector(".lang-select");
         const currentLang = document.querySelector(".current-lang");
