--- a/index_test.html
+++ b/index_test.html
@@ -25,262 +25,7 @@
   <body>
     <main>
       <div class="overlay_bg--block">
-        <img src="./assets/img/deco/overlay_bg.jpg" alt="overlay-bg" />
-      </div>
-      <div id="mo-wide" class="wrapper">
-        <div class="lang-wrap">
-          <button class="lang-select">
-            <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 0 512 512">
-              <path
-                d="M256 480c16.7 0 40.4-14.4 61.9-57.3c9.9-19.8 18.2-43.7 24.1-70.7H170c5.9 27 14.2 50.9 24.1 70.7C215.6 465.6 239.3 480 256 480zM164.3 320H347.7c2.8-20.2 4.3-41.7 4.3-64s-1.5-43.8-4.3-64H164.3c-2.8 20.2-4.3 41.7-4.3 64s1.5 43.8 4.3 64zM170 160H342c-5.9-27-14.2-50.9-24.1-70.7C296.4 46.4 272.7 32 256 32s-40.4 14.4-61.9 57.3C184.2 109.1 175.9 133 170 160zm210 32c2.6 20.5 4 41.9 4 64s-1.4 43.5-4 64h90.8c6-20.3 9.3-41.8 9.3-64s-3.2-43.7-9.3-64H380zm78.5-32c-25.9-54.5-73.1-96.9-130.9-116.3c21 28.3 37.6 68.8 47.2 116.3h83.8zm-321.1 0c9.6-47.6 26.2-88 47.2-116.3C126.7 63.1 79.4 105.5 53.6 160h83.7zm-96 32c-6 20.3-9.3 41.8-9.3 64s3.2 43.7 9.3 64H132c-2.6-20.5-4-41.9-4-64s1.4-43.5 4-64H41.3zM327.5 468.3c57.8-19.5 105-61.8 130.9-116.3H374.7c-9.6 47.6-26.2 88-47.2 116.3zm-143 0c-21-28.3-37.5-68.8-47.2-116.3H53.6c25.9 54.5 73.1 96.9 130.9 116.3zM256 512A256 256 0 1 1 256 0a256 256 0 1 1 0 512z"
-              ></path>
-            </svg>
-            <span class="current-lang"><span class="blind">KO</span></span>
-            <!-- <span class="arrow"></span> -->
-          </button>
-
-          <ul class="lang-dropdown">
-            <li data-lang="ko">한국어</li>
-            <li data-lang="en">ENG</li>
-            <li data-lang="chn">CHN</li>
-            <li data-lang="jp">JP</li>
-          </ul>
-        </div>
-        <section class="sec1">
-          <div class="img--block">
-            <img src="./assets/img/bg01.jpg" alt="sec1_bg" />
-            <!-- <img src="./assets/img/bg1-pc.jpg" alt="sec1_bg" /> -->
-          </div>
-          <div class="link-pin" aria-label="ball" style="top: 2%; height: 10%; left: 28.87%; width: 20%">
-            <div class="img--block">
-              <img src="./assets/img/deco/sec1_ball_01.png" alt="풍선" />
-            </div>
-          </div>
-          <div class="link-pin" aria-label="ball" style="top: 2%; height: 10%; left: 51%; width: 20%">
-            <div class="img--block">
-              <img src="./assets/img/deco/sec1_ball_02.png" alt="풍선" />
-            </div>
-          </div>
-          <div class="link-pin" aria-label="ball" style="top: 2%; height: 10%; left: 73.3%; width: 20%">
-            <div class="img--block">
-              <img src="./assets/img/deco/sec1_ball_03.png" alt="풍선" />
-            </div>
-          </div>
-
-          <div class="link-pin" aria-label="ball01" style="top: 22%; height: 7%; left: 8%; width: 16%">
-            <div class="img--block">
-              <img src="./assets/img/deco/sec1_ball_04.png" alt="풍선" />
-            </div>
-          </div>
-          <!-- sec1 menu -->
-          <a class="link-pin" data-target="#about" aria-label="menu" style="top: 31%; height: 8%; left: 20%; width: 19%">
-            <div class="img--block">
-              <img src="./assets/img/deco/menu1.png" alt="About" />
-            </div>
-          </a>
-          <a class="link-pin" data-target="#sec2" aria-label="menu" style="top: 31%; height: 8%; left: 40%; width: 19%">
-            <div class="img--block">
-              <img src="./assets/img/deco/menu2.png" alt="홍보 영상" />
-            </div>
-          </a>
-          <a class="link-pin" data-target="#sec3" aria-label="menu" style="top: 31%; height: 8%; left: 60%; width: 19%">
-            <div class="img--block">
-              <img src="./assets/img/deco/menu3.png" alt="9 Zone" />
-            </div>
-          </a>
-          <a class="link-pin" data-target="#sec4" aria-label="menu" style="top: 31%; height: 8%; left: 80%; width: 19%">
-            <div class="img--block">
-              <img src="./assets/img/deco/menu4.png" alt="Event" />
-            </div>
-          </a>
-          <!-- about gif -->
-          <div id="about" class="link-pin" aria-label="" style="top: 42%; height: 8%; left: 50%; width: 40%">
-            <div class="img--block">
-              <img src="./assets/img/deco/img-about.gif" alt="about.gif" />
-            </div>
-          </div>
-        </section>
-        <!-- 홍보 영상 -->
-        <section id="sec2" class="sec2">
-          <div class="img--block">
-            <img src="./assets/img/bg2.jpg" alt="" />
-          </div>
-          <div class="link-pin" aria-label="" style="top: -5%; height: 60%; left: 50%; width: 100%">
-            <div class="img--block">
-              <img src="./assets/img/deco/sec2_deco_02.gif" alt="" />
-            </div>
-          </div>
-          <div class="link-pin" aria-label="" style="top: -5.4%; height: 8%; left: 50%; width: 25%">
-            <div class="img--block">
-              <img src="./assets/img/deco/sec2_deco_01.png" alt="" />
-            </div>
-          </div>
-          <div class="link-pin" aria-label="ball02" style="top: 44%; height: 8%; left: 87%; width: 19%">
-            <div class="img--block">
-              <img src="./assets/img/deco/sec2_ball_01.png" alt="" />
-            </div>
-          </div>
-          <a class="link-pin" href="#link1" style="top: 2.7%; height: 17%; left: 50%; width: 50%"> </a>
-          <a class="link-pin" href="#link1" style="top: 22.5%; height: 17%; left: 50%; width: 50%"> </a>
-        </section>
-        <!-- 9zone -->
-        <section id="sec3" class="sec3">
-          <div class="img--block">
-            <img src="./assets/img/bg3.jpg" alt="" />
-          </div>
-          <div class="link-pin" aria-label="ball04" style="top: 11%; height: 14%; left: 7%; width: 18%; z-index: 5">
-            <div class="img--block">
-              <img src="./assets/img/deco/sec1_ball_04.png" alt="" />
-            </div>
-          </div>
-          <div class="link-pin" aria-label="ball05" style="top: 40%; height: 13%; left: 92%; width: 16%; z-index: 5">
-            <div class="img--block">
-              <img src="./assets/img/deco/sec2_ball_01.png" alt="" />
-            </div>
-          </div>
-          <div class="link-pin" style="top: 18%; height: 45%; left: 50%; width: 70%">
-            <div class="swiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <a href="#" data-zone="zone7.html" class="swiper--link open-zone">
-                    <div class="img--block"><img src="./assets/img/place/img_place_01.jpg" alt="" /></div>
-                    <h3 class="title">장충동</h3>
-                    <p class="desc">우리가 몰랐던 리얼 <span>장충</span></p>
-                  </a>
-                </div>
-                <div class="swiper-slide">
-                  <a href="#" data-zone="zone5.html" class="swiper--link open-zone">
-                    <div class="img--block"><img src="./assets/img/place/img_place_02.jpg" alt="" /></div>
-                    <h3 class="title">필동</h3>
-                    <p class="desc"><span>필</span>름처럼 새겨지는 감성<span>동</span>네</p>
-                  </a>
-                </div>
-                <div class="swiper-slide">
-                  <a href="#" data-zone="zone2.html" class="swiper--link open-zone">
-                    <div class="img--block"><img src="./assets/img/place/img_place_03.jpg" alt="" /></div>
-                    <h3 class="title">을지로</h3>
-                    <p class="desc">옛것<span>을</span> <span>지</span>금으<span>로</span></p>
-                  </a>
-                </div>
-                <div class="swiper-slide">
-                  <a href="#" data-zone="zone8.html" class="swiper--link open-zone">
-                    <div class="img--block"><img src="./assets/img/place/img_place_04.jpg" alt="" /></div>
-                    <h3 class="title">회현동</h3>
-                    <p class="desc">기<span>회</span>를 <span>현</span>재로 일구어낸 동네</p>
-                  </a>
-                </div>
-                <div class="swiper-slide">
-                  <a href="#" data-zone="zone1.html" class="swiper--link open-zone">
-                    <div class="img--block"><img src="./assets/img/place/img_place_05.jpg" alt="" /></div>
-                    <h3 class="title">신당동</h3>
-                    <p class="desc"><span>신</span>묘하게 힙하<span>당</span> 힙당동</p>
-                  </a>
-                </div>
-                <div class="swiper-slide">
-                  <a href="#" data-zone="zone6.html" class="swiper--link open-zone">
-                    <div class="img--block"><img src="./assets/img/place/img_place_06.jpg" alt="" /></div>
-                    <h3 class="title">소공동</h3>
-                    <p class="desc">서울<span>소</span>울 피어나는 성<span>공</span>로드</p>
-                  </a>
-                </div>
-                <div class="swiper-slide">
-                  <a href="#" data-zone="zone4.html" class="swiper--link open-zone">
-                    <div class="img--block"><img src="./assets/img/place/img_place_07.jpg" alt="" /></div>
-                    <h3 class="title">명동</h3>
-                    <p class="desc"><span>명</span>성답게 빛나는 <span>동</span>네</p>
-                  </a>
-                </div>
-                <div class="swiper-slide">
-                  <a href="#" data-zone="zone3.html" class="swiper--link open-zone">
-                    <div class="img--block"><img src="./assets/img/place/img_place_08.jpg" alt="" /></div>
-                    <h3 class="title">중림동</h3>
-                    <p class="desc">소<span>중</span>히 마음에 담는 그<span>림</span></p>
-                  </a>
-                </div>
-                <div class="swiper-slide">
-                  <a href="#" data-zone="zone9.html" class="swiper--link open-zone">
-                    <div class="img--block"><img src="./assets/img/place/img_place_09.jpg" alt="" /></div>
-                    <h3 class="title">광희동</h3>
-                    <p class="desc">세계가 열<span>광</span>하는 환<span>희</span>의 빛</p>
-                  </a>
-                </div>
-              </div>
-              <div class="swiper-button-prev btn prev"></div>
-              <div class="swiper-button-next btn next"></div>
-            </div>
-          </div>
-        </section>
-        <!-- playground jung-gu -->
-        <section id="sec4" class="sec4">
-          <div class="img--block">
-            <img src="./assets/img/bg4.jpg" alt="" />
-          </div>
-          <div class="link-pin" aria-label="" style="top: 0%; height: 20%; left: 50%; width: 45.4%">
-            <div class="img--block">
-              <img src="./assets/img/deco/sec4_deco_01.gif" alt="" />
-            </div>
-          </div>
-          <a class="link-pin" href="#link1" aria-label="" style="top: 22.3%; height: 18.4%; left: 27.3%; width: 26%">
-            <div class="img--block"></div>
-          </a>
-          <a class="link-pin" href="#link1" aria-label="" style="top: 22.3%; height: 18.4%; left: 72.7%; width: 26%">
-            <div class="img--block"></div>
-          </a>
-        </section>
-        <section class="sec5">
-          <div class="img--block">
-            <img src="./assets/img/bg5.jpg" alt="" />
-          </div>
-          <div class="link-pin" aria-label="" style="top: 18.5%; height: 31%; left: 50%; width: 56%">
-            <div class="swiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <a href="#none">
-                    <div class="img--block">
-                      <img src="./assets/img/slide-1.png" alt="" />
-                    </div>
-                  </a>
-                </div>
-                <div class="swiper-slide">
-                  <a href="#none">
-                    <div class="img--block">
-                      <img src="./assets/img/slide-1.png" alt="" />
-                    </div>
-                  </a>
-                </div>
-                <div class="swiper-slide">
-                  <a href="#none">
-                    <div class="img--block">
-                      <img src="./assets/img/slide-1.png" alt="" />
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-button-prev btn prev"></div>
-            <div class="swiper-button-next btn next"></div>
-          </div>
-          <div class="link-pin" aria-label="ball03" style="top: 40%; height: 8%; left: 94%; width: 19%">
-            <div class="img--block">
-              <img src="./assets/img/deco/sec2_ball_01.png" alt="" />
-            </div>
-          </div>
-        </section>
-        <section class="sec6">
-          <div class="footer-wrap">
-            <div class="footer-logo">
-              <img src="assets/img/Logo.png" alt="내편중구 로고" />
-            </div>
-
-            <div class="footer-info">
-              <p class="footer-title">[플레이그라운드 중구 운영사무국] 주식회사 더아이케이</p>
-              <p>사업자등록번호 : 770-81-02260</p>
-              <p>Contact : 070-4571-5018 / ksy@theikinc.com</p>
-              <p>ⓒ Jung-Gu Office. All Rights Reserved.</p>
-              <p>사진 출처 ⓒ 한국관광공사 포토코리아(이범수, IR스튜디오, 황선영)</p>
-            </div>
-          </div>
-        </section>
+        <img src="./assets/img/deco/overlay_bg.jpg" alt="sec1_bg" />
       </div>
       <div id="pc-wide" class="wrapper">
         <div class="lang-wrap">
@@ -537,63 +282,35 @@
           </div>
         </section>
       </div>
-
       <div id="layerWrap" class="layer-wrap">
         <div class="layer-content"></div>
       </div>
     </main>
     <script>
       // scrollTo
-      // 이벤트 위임: display:none으로 토글되는 컨테이너에서도 동작하도록 문서 수준에서 처리
-      function handleLinkPinActivation(link) {
-        if (!link) return false;
+      document.querySelectorAll(".link-pin[data-target]").forEach((link) => {
+        link.addEventListener("click", function (e) {
+          e.preventDefault();
 
-        const selector = link.dataset.target;
-        // 같은 뷰(pc-wide / mo-wide) 내에서 id가 중복되어 있을 수 있으므로
-        // 클릭한 요소의 상위 wrapper에서 먼저 검색합니다.
-        const parentWrapper = link.closest('#pc-wide, #mo-wide, .wrapper');
-        let targetEl = null;
-        if (parentWrapper) {
-          targetEl = parentWrapper.querySelector(selector);
-        }
-        // 없으면 문서 전체에서 찾음(안전망)
-        if (!targetEl) targetEl = document.querySelector(selector);
+          const selector = this.dataset.target;
+          const targetEl = document.querySelector(selector);
+          if (!targetEl) return;
 
-        console.debug('link-pin activated:', selector, 'parentWrapper:', parentWrapper, 'targetEl:', targetEl);
-        if (!targetEl) return false;
+          const targetY = targetEl.getBoundingClientRect().top + window.pageYOffset;
 
-        const rect = targetEl.getBoundingClientRect();
-        const targetY = rect.top + window.pageYOffset;
-        const offset = Number(link.dataset.offset) || 0;
-        // 30% 오프셋 추가
-        const percentOffset = window.innerHeight * 0.3;
-        const finalY = targetY - offset - percentOffset;
+          const offset = Number(this.dataset.offset) || 0;
 
-        console.debug('target rect top:', rect.top, 'pageYOffset:', window.pageYOffset, 'finalY:', finalY);
+          // 10% 오프셋 추가
+          const percentOffset = window.innerHeight * 0.3;
 
-        gsap.to(window, {
-          duration: 0.4,
-          scrollTo: finalY,
-          ease: "power2.out",
+          const finalY = targetY - offset - percentOffset;
+
+          gsap.to(window, {
+            duration: 0.4,
+            scrollTo: finalY,
+            ease: "power2.out",
+          });
         });
-
-        return true;
-      }
-
-      document.addEventListener("click", function (e) {
-        const link = e.target.closest(".link-pin[data-target]");
-        if (!link) return;
-        e.preventDefault();
-        handleLinkPinActivation(link);
-      });
-
-      // 모바일에서 touch 이벤트로도 처리 (디바이스에 따라 click이 지연/무시될 수 있음)
-      document.addEventListener("touchend", function (e) {
-        const link = e.target.closest(".link-pin[data-target]");
-        if (!link) return;
-        // prevent duplicate when click also fires; allow touch handler to run first
-        e.preventDefault();
-        handleLinkPinActivation(link);
       });
       let scrollY = 0;
 
